@@ -1,6 +1,7 @@
 # Unreleased
 - [add][minor] Add utility functions for working with `RecvMessageError`.
 - [add][minor] Add `Transport::info()` function to get information about a transport.
+- [add][minor] Allow direct access to the underlying `Transport` of a `Peer`.
 
 # Version 0.5.0-alpha9 - 2022-04-26
 - [fix][minor] Fix unintended infinite recursion in generic trait implementations.
